# ChangeLog for app-crypt/gnupg
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.208 2006/06/30 01:01:56 robbat2 Exp $

  30 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> gnupg-1.9.21.ebuild:
  Fix failure with old gcc versions.

*gnupg-1.9.21 (29 Jun 2006)

  29 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> +gnupg-1.9.21.ebuild:
  Version bump to 1.9.21 for security bug #137622, please note the newer
  version of libksba that is required!.

  28 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> gnupg-1.4.4.ebuild:
  Stable on hppa. See bug #137622.

  28 Jun 2006; Mike Doty <kingtaco@gentoo.org> gnupg-1.4.4.ebuild:
  amd64 stable

  28 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> gnupg-1.4.4.ebuild:
  ppc stable, #137622

  28 Jun 2006; Fabian Groffen <grobian@gentoo.org> gnupg-1.4.4.ebuild:
  Marked ppc-macos stable (bug #137622)

  28 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> gnupg-1.4.4.ebuild:
  Stable on sparc wrt security #137622

  28 Jun 2006; Torsten Veller <tove@gentoo.org> gnupg-1.4.4.ebuild:
  Stable on x86 (#137622)

  28 Jun 2006; Markus Rothe <corsair@gentoo.org> gnupg-1.4.4.ebuild:
  Stable on ppc64; bug #137622

  28 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> gnupg-1.4.4.ebuild:
  Bug #138152, fix compile issues with ECC patch by bumping patch version.

*gnupg-1.4.4 (26 Jun 2006)

  26 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> +gnupg-1.4.4.ebuild:
  Version bump, resolves CVE-2006-3082. Upstream also includes support for
  DSA2/SHA-224 now.

*gnupg-1.9.20-r4 (15 Jun 2006)
*gnupg-1.4.3-r1 (15 Jun 2006)

  15 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> +gnupg-1.4.3-r1.ebuild,
  +gnupg-1.9.20-r4.ebuild:
  Bug #85263 - Disable capabilities code, as it's broken :-(.

  07 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/gnupg-1.9.20-fbsd-gcc41.patch, gnupg-1.9.20-r3.ebuild:
  Add extra patch to build with GCC 4.1 on FreeBSD.
