@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/Attic/gnupg-1.4.4.ebuild,v 1.9 2006/06/28 19:18:03 killerfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/Attic/gnupg-1.4.4.ebuild,v 1.10 2006/06/30 20:15:21 tcort Exp $
 
 inherit eutils flag-o-matic linux-info
 
@@ -15,7 +15,7 @@ SRC_URI="mirror://gnupg/gnupg/${P}.tar.bz2
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm hppa ~ia64 ~mips ppc ppc-macos ppc64 ~s390 ~sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm hppa ~ia64 ~mips ppc ppc-macos ppc64 ~s390 ~sh sparc x86 ~x86-fbsd"
 IUSE="bzip2 curl ecc idea ldap nls readline selinux smartcard static usb zlib X"
 # IUSE+=caps
 
