@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libksba
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.49 2006/06/29 22:15:00 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.50 2006/06/30 20:12:56 tcort Exp $
+
+  30 Jun 2006; Thomas Cort <tcort@gentoo.org> libksba-0.9.15.ebuild:
+  Stable on alpha wrt Bug #137622.
 
 *libksba-0.9.15 (29 Jun 2006)
 
