@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.208 2006/06/30 01:01:56 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.209 2006/06/30 20:15:21 tcort Exp $
+
+  30 Jun 2006; Thomas Cort <tcort@gentoo.org> gnupg-1.4.4.ebuild:
+  Stable on alpha wrt Bug #137622.
 
   30 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> gnupg-1.9.21.ebuild:
   Fix failure with old gcc versions.
